syntax = "proto3";

option csharp_namespace = "HushNetwork.proto";

package rpcHush;

service HushProfile {
  rpc SetProfile (SetProfileRequest) returns (SetProfileReply);
  rpc LoadProfile (LoadProfileRequest) returns (LoadProfileReply);
  rpc ProfileExists (ProfileExistsRequest) returns (ProfileExistsReply);
}

message SetProfileRequest {
  
  message gRpcUserProfile {
    string Id = 1;
    string Issuer = 2;
    string UserPublicSigningAddress = 3;
    string UserPublicEncryptAddress = 4;
    string UserName = 5;
    bool IsPublic = 6;
    string Hash = 7;
    string Signature = 8;
  }

  gRpcUserProfile Profile = 1;
}

message SetProfileReply {
  bool Successfull = 1;
  int32 ResultType = 2;
  string Message = 3;
}

message LoadProfileRequest {
  string ProfilePublicKey = 1;
}

message LoadProfileReply {

  message UserProfile {
    string UserPublicSigningAddress = 1;
    string UserPublicEncryptAddress = 2;
    string UserName = 3;
    bool IsPublic = 4;
  }

  UserProfile Profile = 1;
  bool Successfull = 2;
  string Message = 3;
}

message ProfileExistsRequest {
  string ProfilePublicKey = 1;
}

message ProfileExistsReply {
  bool Exists = 1;
}
